# AutomaticLayout-heck

./: .gitignore  README.md  SeleniumHelper.py  __main__.py  pic_format_converter.py  pyproject.toml  requirements.txt  selenium_helper.py
AutomaticLayoutCheck/: db.sqlite3  file  manage.py  requirements
AutomaticLayoutCheck/ALC_dialog/: 06.1.rar  apps.py  models.py  t1.py  t2.py  t3.py  t4.py  t5.py  t6.py  t7.py  t8.py  t_code.py  urls.py  views.py
AutomaticLayoutCheck/ALC_dialog/ALC/: ALC.py  Controller.py  __main__.py  comparator.py  image_helper.py  selenium_helper.py  t1.py  t2.py  t3.py  t4.py  t5.py  t6.py  сontroller.py
AutomaticLayoutCheck/ALC_dialog/migrations/: 0002_uploadedfile_name_uploadedfile_type_and_more.py  (+2 more)
AutomaticLayoutCheck/AutomaticLayoutCheck/: asgi.py  settings.py  urls.py  wsgi.py
app/: __init__.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
app/ALC/: comparator.py  image_helper.py  selenium_helper.py  сontroller.py
app/base/: constants.py  exceptions.py  types.py
app/compare/: comparator.py
app/engine/: comparator.py  image_helper.py  selenium_helper.py  selenium_manager.py  util.py  сontroller.py
app/migrations/: 0001_initial.py  0002_uploadedfile_name_uploadedfile_type_and_more.py  0003_projectsettings_alter_uploadedfile_file.py  0004_uploadedfile_upload_data.py
app/tests/: views_tests.py
app/utils/: common.py  exceptions.py  utils.py  validators.py
data/site_example/: index.html  style.css  style.less
db/: db.sqlite3
main/: settings.py  urls.py
settings/: settings.py  urls.py  wsgi.py
(+27 files in other folders)
